--- a/TST1-small.css
+++ b/TST1-small.css
@@ -11,7 +11,20 @@
 	height:600px;
 	background-color:;
 }
-
+.content-LEFT {
+	float:left;
+	position:relative;
+	width:68%;
+	max-height:434px;
+	margin-bottom:3px;
+	margin-top:3px;
+	margin-left:3px;
+	background-color: #222;
+	border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
 .content-RIGHT {
 	height: 430px;
 	padding-left: 15px;
